--- a/Spring2024/lab4/backend/package.json
+++ b/Spring2024/lab4/backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
